Fix a couple dot->comma occurrences.

--- a/sk.html
+++ b/sk.html
@@ -2430,7 +2430,7 @@ STE B
 &#9755;&#9755; HDIF|P,Q&rarr;R
 LDA P
 SUB Q
-SCA {-1,-1,,-1,-1}+((Q)^(770.))
+SCA {-1,-1,,-1,-1}+((Q)^(770,))
 STA R
 &#9755;&#9755;EMD
 
@@ -2497,7 +2497,7 @@ STB G+1
 &#9755;&#9755;DEF HSUM&equiv;P,Q&rarr;R
 LDA P
 ADD Q
-SCA {-1,-1,,-1,-1}+((Q)^(770.))
+SCA {-1,-1,,-1,-1}+((Q)^(770,))
 STA R
 &#9755;&#9755;EMD
 
