Add a couple of missing DEFs.

--- a/sk.html
+++ b/sk.html
@@ -2422,12 +2422,12 @@ LAST&rarr;		ZZLAST
 [meta file_name=102726903-05-01-acc.pdf pdf_page=67 doc_page=65 type=macros]
 [Page header: "IES OPLW 012"]
 
-&#9755;&#9755; MOVE|A&rarr;B
+&#9755;&#9755;DEF MOVE|A&rarr;B
 hLDE A
 STE B
 &#9755;&#9755;EMD
 
-&#9755;&#9755; HDIF|P,Q&rarr;R
+&#9755;&#9755;DEF HDIF|P,Q&rarr;R
 LDA P
 SUB Q
 SCA {-1,-1,,-1,-1}+((Q)^(770,))
