Fix a noticed typo.

--- a/sk.html
+++ b/sk.html
@@ -2754,7 +2754,7 @@ MATRY&rarr;		0
 MATD&rarr;		0
  200100|
 BADOV&rarr;		h<sup>1</sup>STE #+2
-		hSKZ OVERFLOSTOP
+		hSKZ OVERFLOWSTOP
 		<sup>2</sup>#<sub>7</sub><sub>6</sub> [very useful as right column contains numeric code]
 		JPQ 200001
  CCFR+1|
