Add missing line.

--- a/sk.html
+++ b/sk.html
@@ -2888,6 +2888,8 @@ H10&rarr;		SMASBL,4,MM2-NLIST
 		#-NLIST-SMASBL,,MM2-NLIST+SPECB+1
 		-2,
 		SPLAT
+		[the last line on the page got clipped, restored because this page is duplicated as doc_page 174 (in part 2)]
+		3,41,,37,42
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=76 doc_page=74 type=main]
